--- a/app/src/main/res/layout/fragment_giphy_list.xml
+++ b/app/src/main/res/layout/fragment_giphy_list.xml
@@ -7,6 +7,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
+        android:clipToPadding="true"
         android:layout_width="match_parent"
         android:padding="@dimen/offset_small"
         android:layout_height="match_parent"/>
