--- a/app/src/main/res/layout/fragment_view_image.xml
+++ b/app/src/main/res/layout/fragment_view_image.xml
@@ -49,29 +49,24 @@
 
     <TextView
         android:id="@+id/retry"
-        android:gravity="center_horizontal"
-        android:text="@string/error_loading_retry"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:drawableTop="@drawable/ic_error_outline_black_24dp"
-        android:drawablePadding="@dimen/offset_large"
+        style="@style/RetryText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/error_loading_retry"
+        android:textColor="@color/white"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/loader"
         style="@android:style/Widget.Material.ProgressBar.Large"
-        android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/names_root"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/image_content"
