--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="graphite">#4a4a4a</color>
+    <color name="graphite">#4A4A4A</color>
 </resources>
