--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,10 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="UserViewerInfo">
+        <item name="android:lines">1</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
 </resources>
